# ElectrochemDataProcessing

./: .gitignore  README.md  electrochem_analysis.py  electrochem_data.py  example_ZBT.py  example_biologic.py  example_gamry.py  example_greenlight.py  gamry.py  input.py  main.py  pyproject.toml
TestData/: PWRPOTSTAT_ps50_zn16_paa1_v08.DTA
TestData/Biologic/: 1.4571_plasma.txt
TestData/Gamry/: Info.txt  info.txt
TestData/Gamry/0k8V_zn12_paa1_20181112/: MK4_Setup.xlsx  PWRPOTSTAT_ps100_zn12_paa1_v08.DTA
TestData/Gamry/0k8V_zn12_paa1_20181112/Data/: PWRPOTSTAT_ps10_zn12_paa1_v08.DTA  PWRPOTSTAT_ps200_zn12_paa1_v08.DTA
TestData/Gamry/0k8V_zn16_paa1_20181112/: process_potentiostatic.py
TestData/Gamry/0k8V_zn16_paa1_20181112/Data/: PWRPOTSTAT_ps100_zn16_paa1_v08.DTA  PWRPOTSTAT_ps10_zn16_paa1_v08.DTA  PWRPOTSTAT_ps200_zn16_paa1_v08.DTA
TestData/Gamry/0k8V_zn8_paa1_20181112/: PWRPOTSTAT_ps50_zn8_paa1_v08.DTA  info.txt
TestData/Gamry/0k8V_zn8_paa1_20181112/Data/: PWRPOTSTAT_ps100_zn8_paa1_v08.DTA  PWRPOTSTAT_ps10_zn8_paa1_v08.DTA  PWRPOTSTAT_ps200_zn8_paa1_v08.DTA
TestData/Gamry/Data/: PWRPOTSTAT_ps50_zn4_paa1_v08.DTA
TestData/Gamry/DataCollection/: PWRPOTSTAT_ps50_zn12_paa1_v08.DTA
TestData/Greenlight/: test_data.csv
TestData/ZBT-LabView/: 08_01_2019_Danfoss_Duese_0.2_Wasser
echem_data/: __init__.py  example_ZBT.py  example_biologic.py  example_gamry.py  example_greenlight.py
echem_data.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
echem_data/src/: electrochem_analysis.py  electrochem_data.py
src/: electrochem_analysis.py  electrochem_data.py
