[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "echem-data"
version = "0.0.1"
authors = [
  { name="Lukas Feierabend", email="l.feierabend@zbt.de" },
]
description = "Electrochemistry Data Processing"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[tool.setuptools.packages.find]
# All the following settings are optional:
# where = ["src"]  # ["."] by default
include = ["echem_data*"]  # ["*"] by default
exclude = ["TestData"]  # empty by default
namespaces = false  # true by default

[project.urls]
"Homepage" = "https://github.com/ZBT-Tools/ElectrochemDataProcessing"
"Bug Tracker" = "https://github.com/ZBT-Tools/ElectrochemDataProcessing/issues"